Wave Gap Fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,8 +99,8 @@ img {
 .waves {
   position:relative;
   width: 100%;
-  height:15vh;
-  margin-bottom:-7px; /*Fix for safari gap*/
+  height:16vh;
+  margin-bottom:-10px; /*Fix for safari gap*/
   min-height:100px;
   max-height:150px;
 }
